// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarRow renders correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr
    className="border car-row "
    onClick={[Function]}
>
    <td
        className="numeric-col"
    >
        1
    </td>
    <td
        className="text-col"
    >
        Audi
    </td>
    <td
        className="numeric-col text-right"
    >
        12
    </td>
</tr>,
  "nodes": Array [
    <tr
      className="border car-row "
      onClick={[Function]}
>
      <td
            className="numeric-col"
      >
            1
      </td>
      <td
            className="text-col"
      >
            Audi
      </td>
      <td
            className="numeric-col text-right"
      >
            12
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CarRow
        car={
                Object {
                        "acceleration": 12,
                        "id": 1,
                        "name": "Audi",
                      }
        }
        editEnabled={false}
        onClick={[Function]}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "car": Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          },
          "editEnabled": false,
          "onClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr
          className="border car-row "
          onClick={[Function]}
>
          <td
                    className="numeric-col"
          >
                    1
          </td>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col text-right"
          >
                    12
          </td>
</tr>,
        "_debugID": 2,
        "_renderedOutput": <tr
          className="border car-row "
          onClick={[Function]}
>
          <td
                    className="numeric-col"
          >
                    1
          </td>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col text-right"
          >
                    12
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CarRow
    car={
        Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          }
    }
    editEnabled={false}
    onClick={[Function]}
/>,
}
`;

exports[`CarRow renders correctly in edit mode 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr
    className="border car-row  edit-enabled bg-primary text-light"
    onClick={[Function]}
>
    <td
        className="numeric-col"
    >
        1
    </td>
    <td
        className="text-col"
    >
        Audi
    </td>
    <td
        className="numeric-col text-right"
    >
        12
    </td>
</tr>,
  "nodes": Array [
    <tr
      className="border car-row  edit-enabled bg-primary text-light"
      onClick={[Function]}
>
      <td
            className="numeric-col"
      >
            1
      </td>
      <td
            className="text-col"
      >
            Audi
      </td>
      <td
            className="numeric-col text-right"
      >
            12
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CarRow
        car={
                Object {
                        "acceleration": 12,
                        "id": 1,
                        "name": "Audi",
                      }
        }
        editEnabled={true}
        onClick={[Function]}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "car": Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          },
          "editEnabled": true,
          "onClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr
          className="border car-row  edit-enabled bg-primary text-light"
          onClick={[Function]}
>
          <td
                    className="numeric-col"
          >
                    1
          </td>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col text-right"
          >
                    12
          </td>
</tr>,
        "_debugID": 4,
        "_renderedOutput": <tr
          className="border car-row  edit-enabled bg-primary text-light"
          onClick={[Function]}
>
          <td
                    className="numeric-col"
          >
                    1
          </td>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col text-right"
          >
                    12
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CarRow
    car={
        Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          }
    }
    editEnabled={true}
    onClick={[Function]}
/>,
}
`;
